#153 Fix overflow hidden in card content for docs pages.

--- a/docs/css/fui-site.css
+++ b/docs/css/fui-site.css
@@ -579,17 +579,10 @@ This will render 4 boxes spanning 2 cols each indented 2 cols
     width: 100vw;
     max-height: 40px;
     overflow: scroll; }
-    .fd-app__sidebar:hover {
-      position: absolute;
-      min-height: 100%; }
     @media (min-width: 800px) {
       .fd-app__sidebar {
-        width: 80px;
-        max-height: 100%; }
-        .fd-app__sidebar:hover {
-          width: 250px;
-          position: relative;
-          margin-right: -200px; } }
+        width: 250px;
+        max-height: 100%; } }
     @media (min-width: 1440px) {
       .fd-app__sidebar {
         width: 250px; }
@@ -4325,6 +4318,8 @@ hr {
   border-bottom-right-radius: 0;
   padding-bottom: 8px;
   border-color: #ccc; }
+  .docs-component .fd-card__content {
+    overflow: visible; }
 
 .docs-example {
   margin-bottom: -28px;
